<resources>
    <string name="app_name">qixw4399</string>
    <string name="radio_findGame">找游戏</string>
    <string name="radio_dynamic">动态</string>
    <string name="game_wide">游戏圈</string>
    <string name="radio_quare">广场</string>
    <string name="radio_my">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findgame_headtext_tj">推荐</string>
    <string name="download">下载</string>
</resources>
